# arrayfire-binary-python-wrapper

./: .coveragerc  .flake8  .gitignore  .isort.cfg  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  dev-requirements.txt  mypy.ini  pyproject.toml  setup.py
.github/workflows/: python-package.yml
arrayfire_wrapper/: __init__.py  _backend.py  _logger.py  _typing.py  backend.py  defines.py  dtypes.py  version.py
arrayfire_wrapper/lib/: __init__.py  _broadcast.py  _constants.py  _error_handler.py  _utility.py  array_layout.py  event_api.py  features.py  statistics.py  unified_api_functions.py
arrayfire_wrapper/lib/computer_vision/: feature_descriptors.py  feature_detector.py  feature_matchers.py  template_matching.py
arrayfire_wrapper/lib/create_and_modify_array/: __init__.py  helper_functions.py  manage_array.py  manage_device.py  move_and_reorder.py
arrayfire_wrapper/lib/create_and_modify_array/assignment_and_indexing/: __init__.py  _indexing.py  assign.py  index.py  indexing.py  lookup.py
arrayfire_wrapper/lib/create_and_modify_array/create_array/: __init__.py  constant.py  diag.py  identity.py  iota.py  lower.py  pad.py  random_number_generation.py  range.py  upper.py
arrayfire_wrapper/lib/image_processing/: __init__.py  colorspace_conversions.py  filters.py  gaussian_kernel.py  histograms.py  image_moments.py  image_transformations.py  labeling.py  morphological_operations.py  wrapping.py
arrayfire_wrapper/lib/input_and_output/: __init__.py  rw_arrays.py  rw_images.py
arrayfire_wrapper/lib/interface_functions/: cuda.py  interop.py  opencl.py
arrayfire_wrapper/lib/linear_algebra/: __init__.py  blas_operations.py  lapack_helpers.py  matrix_factorization_and_decomposition.py  matrix_operations.py  solve_and_least_squares.py  sparse_functions.py
arrayfire_wrapper/lib/machine_learning/: convolutions.py
arrayfire_wrapper/lib/mathematical_functions/: __init__.py  arithmetic_operations.py  complex_operations.py  exp_and_log_functions.py  hyperbolic_functions.py  logical_operations.py  numeric_functions.py  trigonometric_functions.py
arrayfire_wrapper/lib/signal_processing/: convolutions.py  fast_fourier_transforms.py  filter.py  interpolation_and_approximation.py
arrayfire_wrapper/lib/vector_algorithms/: inclusive_scan_operations.py  numerical_differentiation.py  reduction_operations.py  set_operations.py  sort_operations.py
scripts/: build_package_without_binaries.sh
tests/: complex_testing.py  test_arithmetic.py  test_bitshift.py  test_blas.py  test_complex.py  test_constants.py  test_conv.py  test_conv_f.py  test_conv_grad.py  test_defines.py  test_diag.py  test_dtypes.py  test_exp_log.py  test_fft.py  test_fir.py  test_hyperbolic.py  test_identity.py  test_inclusive.py  test_interop.py  test_iota.py  test_logical.py  test_lower.py  test_matrix_factorization_decomposition.py  test_matrix_operations.py  test_muldiv.py  test_numeric.py  test_opencl.py  test_pad.py  test_random.py  test_range.py  test_trig.py  test_upper.py  test_utilities.py  utility_functions.py
