[tool.black]
line-length = 119

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \btutorials\b
    | \bbuild\b
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[build-system]
requires = [
  "setuptools >= 68.0",
  "wheel >= 0.38.4",
  "scikit-build >= 0.17.6",
  "cmake >= 3.28.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "arrayfire_wrapper.VERSION" }

[project]
name = "arrayfire-binary-python-wrapper"
dynamic = ["version"]
requires-python = ">=3.10"
authors = [
  { name = "Anton Chernyatevich", email = "chernyatevich.a@gmail.com" },
]
maintainers = [{ name = "ArrayFire", email = "technical@arrayfire.com" }]
description = "ArrayFire Python Wrapper"
readme = "README.md"
license = { file = "LICENCE" }
keywords = [
  "arrayfire",
  "c",
  "python",
  "wrapper",
  "parallel computing",
  "gpu",
  "cpu",
  "opencl",
  "oneapi",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Website = "http://arrayfire.com"
"General Documentation" = "https://arrayfire.org/docs/index.htm"
